[gd_scene load_steps=6 format=3 uid="uid://j3wcm6tulvtr"]

[ext_resource type="Texture2D" uid="uid://dluoebhi1f5gr" path="res://dialogue-box.png" id="1_gwvjd"]
[ext_resource type="Script" path="res://dialogue.gd" id="1_ra7t6"]
[ext_resource type="Texture2D" uid="uid://b4hsjwk5qc5r" path="res://label.png" id="2_1ahr0"]
[ext_resource type="Texture2D" uid="uid://d2upypqaobrv0" path="res://arrow.png" id="3_5i2ro"]
[ext_resource type="Texture2D" uid="uid://dxxiji24hlxgd" path="res://ACCEPT.png" id="5_s53q8"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -330.0
offset_top = -100.0
offset_right = 330.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource("1_ra7t6")

[node name="Dialogue" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="Dialogue"]
layout_mode = 2
texture = ExtResource("1_gwvjd")
expand_mode = 2

[node name="Text" type="Label" parent="Dialogue/TextureRect"]
layout_mode = 2
offset_left = 54.0
offset_top = 52.0
offset_right = 618.0
offset_bottom = 158.0
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 21
autowrap_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
offset_left = 40.0
offset_top = -17.0
offset_right = 217.0
offset_bottom = 30.0

[node name="TextureRect" type="TextureRect" parent="MarginContainer"]
layout_mode = 2
texture = ExtResource("2_1ahr0")
expand_mode = 2

[node name="TextLabel" type="Label" parent="MarginContainer/TextureRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)

[node name="TextureButton" type="TextureButton" parent="."]
custom_minimum_size = Vector2(30, 30)
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -80.0
offset_top = -65.0
offset_right = -40.0
offset_bottom = -25.0
grow_horizontal = 0
grow_vertical = 0

[node name="TextureRect" type="TextureRect" parent="TextureButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_5i2ro")
expand_mode = 2

[node name="TextureButton2" type="TextureButton" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 0

[node name="TextureRect" type="TextureRect" parent="TextureButton2"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = -63.0
offset_right = 46.0
offset_bottom = -31.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("5_s53q8")
expand_mode = 2

[connection signal="pressed" from="TextureButton" to="." method="_on_texture_button_pressed"]
[connection signal="pressed" from="TextureButton2" to="." method="_on_texture_button_2_pressed"]
